Fix get all posts api can not get all data and implement batch api for update a post
