# services/post/routes.go
@@ -3,7 +3,9 @@ package post
 import (
 	"fmt"
 	"net/http"
+	"strconv"
 
+	"github.com/go-playground/validator/v10"
 	"github.com/gorilla/mux"
 	"github.com/thangsuperman/bee-happy/services/auth"
 	"github.com/thangsuperman/bee-happy/types"
@@ -20,15 +22,96 @@ func NewHandler(store types.PostStore, userStore types.UserStore) *Handler {
 }
 
 func (h *Handler) RegisterRoutes(router *mux.Router) {
-	router.HandleFunc("/posts", auth.WithJWTAuth(h.handleGetProducts, h.userStore)).Methods(http.MethodGet)
+	router.HandleFunc("/posts", h.handleGetProducts).Methods(http.MethodGet)
+	router.HandleFunc("/post", auth.WithJWTAuth(h.handleCreateProduct, h.userStore)).Methods(http.MethodPost)
+	router.HandleFunc("/post/{id}", auth.WithJWTAuth(h.updatePost, h.userStore)).Methods(http.MethodPatch)
 }
 
+// updateProduc update a post
+// @Summary Update a post
+// @Description Create a new post
+// @Tags Post
+// @Accept json
+// @Produce json
+// @Param Authorization header string true "JWT Token"
+// @Param id path string true "Post ID"
+// @Param payload body types.UpdatePostPayload  true "Post payload"
+// @Success 200 {object} types.BaseResponse "Success"
+// @Router /api/v1/post/{id} [patch]
+func (h *Handler) updatePost(w http.ResponseWriter, r *http.Request) {
+	authorId := auth.GetUserIdFromContext(r.Context())
+	stringPostId := mux.Vars(r)["id"]
+	var payload types.UpdatePostPayload
+	if err := utils.ParseJSON(r, &payload); err != nil {
+		utils.WriteError(w, http.StatusBadRequest, err)
+		return
+	}
+
+	if err := utils.Validate.Struct(payload); err != nil {
+		errors := err.(validator.ValidationErrors)
+		utils.WriteError(w, http.StatusBadRequest, fmt.Errorf("invalid payload %w", errors))
+		return
+	}
+
+	postId, err := strconv.Atoi(stringPostId)
+	if err != nil {
+		utils.WriteError(w, http.StatusInternalServerError, err)
+	}
+
+	if err := h.store.UpdatePost(payload, postId, authorId); err != nil {
+		utils.WriteError(w, http.StatusInternalServerError, err)
+	}
+
+	utils.WriteJSON(w, http.StatusOK, types.BaseResponse{
+		Message:  "Update post successfully",
+		Metadata: payload,
+	})
+}
+
+// handleCreatePost creates a new post.
+// @Summary Create a new post
+// @Description Create a new post
+// @Tags Post
+// @Accept json
+// @Produce json
+// @Param Authorization header string true "JWT Token"
+// @Param payload body types.CreatePostPayload true "Post payload"
+// @Success 200 {object} types.BaseResponse "Success"
+// @Router /api/v1/post [post]
+func (h *Handler) handleCreateProduct(w http.ResponseWriter, r *http.Request) {
+	authorId := auth.GetUserIdFromContext(r.Context())
+	var payload types.CreatePostPayload
+	if err := utils.ParseJSON(r, &payload); err != nil {
+		utils.WriteError(w, http.StatusBadRequest, err)
+		return
+	}
+
+	if err := utils.Validate.Struct(payload); err != nil {
+		errors := err.(validator.ValidationErrors)
+		utils.WriteError(w, http.StatusBadRequest, fmt.Errorf("invalid payload %w", errors))
+		return
+	}
+
+	err := h.store.CreatePost(payload, authorId)
+	if err != nil {
+		utils.WriteError(w, http.StatusInternalServerError, err)
+	}
+
+	utils.WriteJSON(w, http.StatusOK, types.BaseResponse{
+		Message:  "Create a post successfully",
+		Metadata: payload,
+	})
+}
+
+// handleGetProducts get all posts
+// @Summary Get all posts
+// @Description Create a new post
+// @Tags Post
+// @Accept json
+// @Produce json
+// @Success 200 {object} types.BaseResponse "Success"
+// @Router /api/v1/posts [get]
 func (h *Handler) handleGetProducts(w http.ResponseWriter, r *http.Request) {
-	userId := auth.GetUserIdFromContext(r.Context())
-
-	// TODO: should remove this one
-	fmt.Println("userId :", userId)
-
 	products, err := h.store.GetPosts()
 	if err != nil {
 		utils.WriteError(w, http.StatusInternalServerError, err)
